--- a/server/views/index.pug
+++ b/server/views/index.pug
@@ -1,7 +1,7 @@
 extends layouts/main.pug
 
 block content
-  main
-    h1 Mezzaluna Farmstead
+  main.center.mw6
+    h1.tc Mezzaluna Farmstead
     div
       p Hello World!
