--- a/server/views/store/add.pug
+++ b/server/views/store/add.pug
@@ -5,6 +5,8 @@ block content
     section
       input(placeholder='Item Name' name='name')
     section
+      input(placeholder='Item Price' name='price')
+    section
       textarea(placeholder='Item Description' name='description')
     section
       input(id="image-input" name='images' type='file' multiple='multiple' accept='image/*')
