--- a/server/views/store/product.pug
+++ b/server/views/store/product.pug
@@ -8,7 +8,7 @@ section
   ul
     each image in product.images
       li
-        img(src=`/store/photos/thumbs/${image.filename}`)
+        img(src=`/store/photos/thumbs/${image}`)
 
 section
   ul.list
